# all-together-now

./: CHANGES.md  CLAUDE.md  Cargo.toml  README.md  agents.example.toml  agents.toml
.agentrail/: plan.md  saga.toml
.agentrail-archive/all-together-now-20260417T161635/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/all-together-now-20260417T161635/sessions/: 53bac58c-9f32-4c71-9d51-fa9ce1fa5722.jsonl  886690f4-d89f-4c92-84b2-720224317fd6.jsonl  967092b7-33b9-4fbe-817f-9329f6dabaf5.jsonl  d16c4b6b-05ff-403f-ba53-0367388a435a.jsonl  d5ac4444-6e1d-429d-a4fe-43c9e270a688.jsonl  f1c906ff-7477-43f2-86ec-cfdadec0b4a9.jsonl  f2d1cca4-6923-4b4a-b5aa-97f2c2b41eef.jsonl  f655f52b-899d-4d84-b879-182a1f99ad67.jsonl
.agentrail-archive/all-together-now-20260418T235203/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/all-together-now-20260418T235203/sessions/: 7a4fc658-d8eb-4a9a-b2e4-6098a79f3a20.jsonl
.agentrail-archive/all-together-now-20260421T160908/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/all-together-now-20260421T165302/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/all-together-now-20260422T090611/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/all-together-now-20260422T203459/: plan.md  saga.toml
.agentrail-archive/all-together-now-20260422T203459/sessions/: a5fc73b8-e5d3-4be9-94e9-a0386872eed9.jsonl
.agentrail-archive/atn-agent-20260424T152239/: saga.toml
.agentrail-archive/atn-cli-20260423T220557/: plan.md
.agentrail-archive/dashboard-polish-20260424T103149/: plan.md  saga.toml
.agentrail-archive/git-sync-agents-20260424T190133/: plan.md
.agentrail-archive/ops-polish-20260423T172229/: plan.md
.agentrail/sessions/: a5fc73b8-e5d3-4be9-94e9-a0386872eed9.jsonl
.agentrail/steps/001-agent-scaffold/: prompt.md
.agentrail/steps/001-cli-scaffold/: step.toml  summary.md
.agentrail/steps/001-priority-escape/: prompt.md
.agentrail/steps/001-prs-sse-stream/: prompt.md  step.toml  summary.md
.agentrail/steps/001-syncd-scaffold/: prompt.md  step.toml  summary.md
.agentrail/steps/002-agent-ollama-chat/: step.toml
.agentrail/steps/002-cli-agents-actions/: prompt.md  step.toml
.agentrail/steps/002-events-detail-expand/: step.toml  summary.md
.agentrail/steps/002-prs-panel-ui/: prompt.md  step.toml
.agentrail/steps/002-syncd-push-and-record/: prompt.md  step.toml  summary.md
.agentrail/steps/003-agent-tools-fs/: prompt.md  step.toml  summary.md
.agentrail/steps/003-cli-events/: prompt.md  step.toml
.agentrail/steps/003-prs-merge-ui/: prompt.md  step.toml
.agentrail/steps/003-prs-rest-endpoint/: prompt.md  step.toml
.agentrail/steps/003-wiki-panel-core/: prompt.md  step.toml  summary.md
.agentrail/steps/004-agent-tools-shell-outbox/: prompt.md  step.toml
.agentrail/steps/004-cli-wiki/: step.toml
.agentrail/steps/004-prs-cli/: step.toml  summary.md
.agentrail/steps/004-prs-filter-and-search/: prompt.md  step.toml
.agentrail/steps/004-pty-screenshot-ui/: step.toml
.agentrail/steps/004-wiki-panel-live/: prompt.md  step.toml
.agentrail/steps/005-agent-integration-demo-docs/: prompt.md  step.toml  summary.md
.agentrail/steps/005-cli-integration-and-docs/: step.toml  summary.md
.agentrail/steps/005-dashboard-polish-docs/: prompt.md  step.toml
.agentrail/steps/005-git-sync-integration-and-docs/: step.toml  summary.md
.agentrail/steps/005-prs-docs-and-demo/: prompt.md  step.toml
.agentrail/steps/005-watchdog-core/: prompt.md  step.toml  summary.md
.agentrail/steps/006-watchdog-actions/: prompt.md  step.toml  summary.md
.agentrail/trajectories/axum-sse-server/: run_001.json
.agentrail/trajectories/pre-commit/: run_001.json
.agentrail/trajectories/rust-project-init/: run_001.json  run_002.json  run_003.json
.agentrail/trajectories/rust-pty-integration/: run_001.json
.agentrail/trajectories/rust-workspace-setup/: run_001.json
.agentrail/trajectories/yew-component/: run_003.json
crates/atn-agent/: Cargo.toml
crates/atn-agent/src/: llm.rs  main.rs  tools.rs
crates/atn-agent/tests/: integration.rs
crates/atn-cli/: Cargo.toml
crates/atn-cli/src/: main.rs
crates/atn-cli/tests/: integration.rs
crates/atn-core/: Cargo.toml
crates/atn-core/src/: agent.rs  config.rs  controller.rs  error.rs  event.rs  inbox.rs  lib.rs  pr.rs  router.rs  (+3 more)
crates/atn-pty/: Cargo.toml
crates/atn-pty/src/: lib.rs  manager.rs  reader.rs  session.rs  snapshot.rs  state_tracker.rs  transcript.rs  watchdog.rs  writer.rs
crates/atn-pty/tests/: integration.rs
crates/atn-replay/: Cargo.toml
crates/atn-server/: Cargo.toml
crates/atn-server/src/: client_log.rs  heat.rs  main.rs  prs.rs  prs_stream.rs  router.rs  watchdog_actor.rs
crates/atn-server/static/: index.html
crates/atn-server/tests/: prs_endpoints.rs  screenshot_endpoint.rs  three_agent_demo.rs
crates/atn-syncd/: Cargo.toml
crates/atn-syncd/src/: main.rs
crates/atn-syncd/tests/: integration.rs
crates/atn-trail/: Cargo.toml
crates/atn-trail/src/: cli.rs  lib.rs  reader.rs
crates/atn-ui/: Cargo.toml  Trunk.toml  index.html
crates/atn-ui/src/: app.rs  lib.rs  main.rs  wiki.rs
crates/atn-wiki/: Cargo.toml
crates/atn-wiki/src/: coordination.rs  storage.rs
demo/: demo-agents.toml  run-demo.sh
demo/last-run/: app-v1.py  app-v2.py
demos/atn-agent/: setup.sh
demos/blog-vlog/: kickoff.sh  setup.sh
demos/factory-line/: drive-bash.sh  kickoff.sh  setup.sh
demos/git-sync/: setup.sh
demos/scale/: setup.sh
demos/self-test-line/: setup.sh  verify.sh
demos/three-agent/: setup.sh
demos/windowed-ui/: setup.sh
docs/: architecture.md  atn-agent.md  atn-cli.md  demo-review.org  demo-three-agent.md  demos-scripts.md  design.md  events-view.md  git-sync-agents.md  needed-tools.md  plan.md  prd.md  remote-pty.md  research.txt  scale-ui.md  status.md  uber-use-case.md  ui-walkthrough.md  usage.md  windowed-ui.md
docs/images/: dev-final.html  feature-final.html
tools/: fake-agent-profile  fake-claude  fake-codex  fake-mosh  fake-opencode-glm5
work/reg-rs/: atn-demo.out  atn-demo.rgt
(+207 files in other folders)
