[package]
name = "atn-pty"
version.workspace = true
edition.workspace = true

[dependencies]
atn-core = { workspace = true }
chrono = { workspace = true }
portable-pty = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
