[package]
name = "atn-server"
version.workspace = true
edition.workspace = true

[dependencies]
atn-core = { workspace = true }
atn-pty = { workspace = true }
atn-wiki = { workspace = true }
atn-trail = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
