[package]
name = "atn-server"
version.workspace = true
edition.workspace = true

[dependencies]
atn-core = { workspace = true }
atn-pty = { workspace = true }
atn-wiki = { workspace = true }
atn-trail = { workspace = true }
wiki-common = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
