[package]
name = "atn-syncd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atn-syncd"
path = "src/main.rs"

[dependencies]
atn-core = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
