[package]
name = "atn-ui"
version.workspace = true
edition.workspace = true

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Element",
    "Event",
    "NodeList",
    "HtmlElement",
] }
gloo-net = { version = "0.6", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
